# Mov-cli

./: .gitignore  README.md  pyproject.toml
mov_cli/: __init__.py  main.py
mov_cli/cli/: commands.py
mov_cli/models/: media.py
mov_cli/services/: player_service.py  tmdb_service.py  torrent_service.py
mov_cli/utils/: cache.py  config.py
tests/: test_cache.py  test_models.py
