[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mov-cli"
version = "1.0.0"
description = "A fast, modular terminal CLI for streaming movies and TV series"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "mov-cli contributors" }]
requires-python = ">=3.10"
keywords = ["movies", "cli", "streaming", "terminal", "mpv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "prompt_toolkit>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
mov-cli = "mov_cli.main:app"

[project.urls]
Homepage = "https://github.com/mov-cli/mov-cli"
Repository = "https://github.com/mov-cli/mov-cli"
Issues = "https://github.com/mov-cli/mov-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mov_cli*"]

[tool.ruff]
line-length = 100
target-version = "py310"
